Fix famas/galilar bind

--- a/CSGO/autoexec.cfg
+++ b/CSGO/autoexec.cfg
@@ -183,8 +183,7 @@ bind kp_leftarrow "buy incgrenade;buy molotov"
 bind kp_5 "buy flashbang"
 bind kp_rightarrow "buy p250"
 bind kp_end "buy m4a1;buy ak47"
-bind kp_downarrow "
-buy famas; buy galilar"
+bind kp_downarrow "buy famas; buy galilar"
 bind kp_pgdn "buy ump45"
 bind kp_ins "buy vesthelm"
 bind kp_del "buy vest"
